--- a/style.css
+++ b/style.css
@@ -191,3 +191,133 @@ bottom: 20px;
 right: 10px;
 
 }
+#banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: url('./img/banner/b2.jpg');
+    width: 100%;
+    height: 40vh;
+    background-position: center;
+    background-size: cover;
+}
+#banner h4{
+    font-size: 14px;
+    color:white;
+}
+#banner h2{
+    color: white;
+    font-size: 30px;
+    padding: 10px 0;
+}
+#banner span{
+    color: aqua;
+}
+button {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+    transition: 0.2s;
+}
+button.white{
+    font-size: 13px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+  
+    cursor: pointer;
+    outline: none;
+    transition: 0.2s;
+}
+#banner  button:hover{
+    background: #088178;
+    color: white;
+}
+#sm-banner{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+   
+    background: url('./img/banner/b17.jpg');
+    min-width: 580px;
+    height: 50vh;
+    background-position: center;
+    background-size: cover;
+    padding: 30px;
+}
+.banner-box2{
+    background: url('./img/banner/b10.jpg');
+}
+#sm-banner h4{
+    color: white;
+    font-size: 20px;
+    font-weight: 300;
+}
+#sm-banner h2{
+    color: white;
+    font-weight: 800;
+    font-size: 28px;
+
+}
+#sm-banner span{
+    color: white;
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+.banner-box:hover button {
+    background : #088178 ;
+    border : 1px solid #088178  ;
+}
+#banner3{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 80px;
+    justify-content: space-evenly;
+}
+#banner3 .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+   
+    background-image: url('./img/banner/b7.jpg');
+    min-width: 30%;
+    height: 30vh;
+    background-position: center;
+    background-size: cover;
+    padding: 20px;
+    margin: 20px;
+}
+#banner3 .banner-box2{
+    background-image: url('./img/banner/b4.jpg');
+}
+#banner3 .banner-box3{
+    background-image: url('./img/banner/b18.jpg');
+}
+#banner3 h2{
+    color: white;
+    font-weight: 900;
+    font-size: 22px;
+}
+#banner3 h3{
+    color: #ec544e;
+    font-weight: 800;
+    font-size: 15px;
+}
