--- a/style.css
+++ b/style.css
@@ -1,323 +1,572 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 /* footer */
-#header{
-    display: flex;
-    padding: 20px 80px;
-    justify-content: space-between;
-    background: #e3e6f3;
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.06);
+#header {
+  display: flex;
+  padding: 20px 80px;
+  justify-content: space-between;
+  background: #e3e6f3;
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
 }
-#navbar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-#navbar li{
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
+#navbar li {
+  list-style: none;
+  padding: 0 20px;
+  position: relative;
 }
-#navbar a{
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: #1a1a1a;
-    transition: 0.3s ease;
+#navbar a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: #1a1a1a;
+  transition: 0.3s ease;
 }
-#navbar a:hover,#navbar a.active{
-    color: #088178;
-   
+#navbar a:hover,
+#navbar a.active {
+  color: #088178;
 }
-#navbar li a.active::after,#navbar li a:hover::after{
-    content: "";
-    width: 30%;
-    height: 2px;
-    background: #088178;
-    bottom: -4px;
-    left: 20px;
-    position: absolute;
+#navbar li a.active::after,
+#navbar li a:hover::after {
+  content: "";
+  width: 30%;
+  height: 2px;
+  background: #088178;
+  bottom: -4px;
+  left: 20px;
+  position: absolute;
 }
-#hero{
-    background: url('./img/hero4.png');
-    height: 90vh;
-    width: 100%;
-    background-position: top 25% right 0;
-    background-size: cover;
-    padding: 0 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+#mobile {
+  display: none;
+  align-items: center;
 }
-#hero h4{
-    padding-bottom: 15px;
+#close{
+    display: none;
 }
-#hero h1{
-    color: #088178;
+#hero {
+  background: url("./img/hero4.png");
+  height: 90vh;
+  width: 100%;
+  background-position: top 25% right 0;
+  background-size: cover;
+  padding: 0 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
-#hero button{
-    background-image: url("./img/button.png");
-    background-color: transparent;
-    border: 0;
-    color: #088178;
-    padding: 14px 80px 14px 65px;
-    background-repeat: no-repeat;
-    cursor: pointer;
+#hero h4 {
+  padding-bottom: 15px;
 }
-#feature{
-   
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+#hero h1 {
+  color: #088178;
 }
-.section-p1{
-    padding: 40px 80px;;
+#hero button {
+  background-image: url("./img/button.png");
+  background-color: transparent;
+  border: 0;
+  color: #088178;
+  padding: 14px 80px 14px 65px;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
-.feature-box{
-    
-    width: 180px;
-    text-align: center;
-    padding: 25px 15px;
-    box-shadow: 20px 20px 34px rgba(0,0,0,0.03);
-    border: 1px solid #cce7d0 ;
-    border-radius: 4px;
-    margin: 15px 0;
+#feature {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
- .feature-box:hover{
-    cursor: pointer;
-    box-shadow: 10px 10px 54px rgba(120,142,221,0.3);
- }
- .feature-box h6{
-    padding: 9px 8px 6px 8px;
-    line-height: 1;
-    display: inline-block;
-    border-radius: 4px;
-    color: #088178;
-    background-color: #fddde4;
- }
- .feature-box img{
-    width: 100%;
-    margin-bottom: 10px;
- }
- .feature-box:nth-child(2) h6{
-    background-color: #cdebbc;
- }
- .feature-box:nth-child(3) h6{
-    background-color: #d1e8f2;
- }
- .feature-box:nth-child(4) h6{
-    background-color: #cdd4f8;
- }
- .feature-box:nth-child(5) h6{
-    background-color: #f6dbf6;
- }
- .feature-box:nth-child(6) h6{
-    background-color: #fff2e5;
- }
+.section-p1 {
+  padding: 40px 80px;
+}
+.feature-box {
+  width: 180px;
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+  border: 1px solid #cce7d0;
+  border-radius: 4px;
+  margin: 15px 0;
+}
+.feature-box:hover {
+  cursor: pointer;
+  box-shadow: 10px 10px 54px rgba(120, 142, 221, 0.3);
+}
+.feature-box h6 {
+  padding: 9px 8px 6px 8px;
+  line-height: 1;
+  display: inline-block;
+  border-radius: 4px;
+  color: #088178;
+  background-color: #fddde4;
+}
+.feature-box img {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.feature-box:nth-child(2) h6 {
+  background-color: #cdebbc;
+}
+.feature-box:nth-child(3) h6 {
+  background-color: #d1e8f2;
+}
+.feature-box:nth-child(4) h6 {
+  background-color: #cdd4f8;
+}
+.feature-box:nth-child(5) h6 {
+  background-color: #f6dbf6;
+}
+.feature-box:nth-child(6) h6 {
+  background-color: #fff2e5;
+}
 
- #product1{
-    text-align: center;
-    padding: 40px 50px;
- }
- #product1 .pro-container{
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 20px;
-    justify-content: space-between;
- }
- #product1 .pro{
-
-    width: 23%;
-    min-width:250px ;
-    padding: 10px 12px;
-    border: 1px solid #cce7d0;
-    border-radius: 25px;
-    cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0,0,0,0.02);
-    margin: 15px 0;
-    position: relative;
-    transition: 0.2s ease;
- }
- #product1 .pro:hover{
-    box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
- }
- #product1 img{
-    width: 100%;
-    border-radius: 20px;
- }
- #product1 .pro .des{
-    text-align: start;
-    padding: 10px 0;
- }
- #product1 .pro .des span{
-    color: #606063;
-    font-size: 12px;
- }
- #product1 .pro .des h5{
-    font-size: 14px;
-    color: #1a1a1a;
-    padding-top: 7px;
- }
- #product1 .pro .des i{
-    font-size: 12px;
-    color: rgb(243, 181, 25);
- }
- #product1 .pro .des h4 {
-    padding-top : 7px ;
-    font-size: 15px ;
-    font-weight : 700 ;
-    color: #088178 ;
- }
-#product1 .pro .cart{
-width : 40px ;
-height : 40px ;
-line-height : 40px ;
-border-radius : 50px ;
-background-color : #e8f6ea ;
-border: 1px solid #cce7d0;
-color : #088178  ;
-position: absolute;
-bottom: 20px;
-right: 10px;
-
+#product1 {
+  text-align: center;
+  padding: 40px 50px;
 }
-#banner{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: url('./img/banner/b2.jpg');
-    width: 100%;
-    height: 40vh;
-    background-position: center;
-    background-size: cover;
+#product1 .pro-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  justify-content: space-between;
 }
-#banner h4{
-    font-size: 14px;
-    color:white;
+#product1 .pro {
+  width: 23%;
+  min-width: 250px;
+  padding: 10px 12px;
+  border: 1px solid #cce7d0;
+  border-radius: 25px;
+  cursor: pointer;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+  margin: 15px 0;
+  position: relative;
+  transition: 0.2s ease;
 }
-#banner h2{
-    color: white;
-    font-size: 30px;
-    padding: 10px 0;
+#product1 .pro:hover {
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
 }
-#banner span{
-    color: aqua;
+#product1 img {
+  width: 100%;
+  border-radius: 20px;
+}
+#product1 .pro .des {
+  text-align: start;
+  padding: 10px 0;
+}
+#product1 .pro .des span {
+  color: #606063;
+  font-size: 12px;
+}
+#product1 .pro .des h5 {
+  font-size: 14px;
+  color: #1a1a1a;
+  padding-top: 7px;
+}
+#product1 .pro .des i {
+  font-size: 12px;
+  color: rgb(243, 181, 25);
+}
+#product1 .pro .des h4 {
+  padding-top: 7px;
+  font-size: 15px;
+  font-weight: 700;
+  color: #088178;
+}
+#product1 .pro .cart {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 50px;
+  background-color: #e8f6ea;
+  border: 1px solid #cce7d0;
+  color: #088178;
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+}
+#banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: url("./img/banner/b2.jpg");
+  width: 100%;
+  height: 40vh;
+  background-position: center;
+  background-size: cover;
+}
+#banner h4 {
+  font-size: 14px;
+  color: white;
+}
+#banner h2 {
+  color: white;
+  font-size: 30px;
+  padding: 10px 0;
+}
+#banner span {
+  color: aqua;
 }
 button {
-    font-size: 14px;
-    font-weight: 600;
-    padding: 15px 30px;
-    color: #000;
-    background-color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    outline: none;
-    transition: 0.2s;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 15px 30px;
+  color: #000;
+  background-color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+  transition: 0.2s;
 }
-button.white{
-    font-size: 13px;
-    font-weight: 600;
-    padding: 11px 18px;
-    color: white;
-    background-color: transparent;
-    border: 1px solid white;
-  
-    cursor: pointer;
-    outline: none;
-    transition: 0.2s;
-}
-#banner  button:hover{
-    background: #088178;
-    color: white;
-}
-#sm-banner{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.banner-box{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-   
-    background: url('./img/banner/b17.jpg');
-    min-width: 580px;
-    height: 50vh;
-    background-position: center;
-    background-size: cover;
-    padding: 30px;
-}
-.banner-box2{
-    background: url('./img/banner/b10.jpg');
-}
-#sm-banner h4{
-    color: white;
-    font-size: 20px;
-    font-weight: 300;
-}
-#sm-banner h2{
-    color: white;
-    font-weight: 800;
-    font-size: 28px;
+button.white {
+  font-size: 13px;
+  font-weight: 600;
+  padding: 11px 18px;
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
 
+  cursor: pointer;
+  outline: none;
+  transition: 0.2s;
 }
-#sm-banner span{
-    color: white;
-    font-size: 14px;
-    font-weight: 500;
-    padding-bottom: 15px;
+#banner button:hover {
+  background: #088178;
+  color: white;
+}
+#sm-banner {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.banner-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  background: url("./img/banner/b17.jpg");
+  min-width: 580px;
+  height: 50vh;
+  background-position: center;
+  background-size: cover;
+  padding: 30px;
+}
+.banner-box2 {
+  background: url("./img/banner/b10.jpg");
+}
+#sm-banner h4 {
+  color: white;
+  font-size: 20px;
+  font-weight: 300;
+}
+#sm-banner h2 {
+  color: white;
+  font-weight: 800;
+  font-size: 28px;
+}
+#sm-banner span {
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  padding-bottom: 15px;
 }
 .banner-box:hover button {
-    background : #088178 ;
-    border : 1px solid #088178  ;
+  background: #088178;
+  border: 1px solid #088178;
 }
-#banner3{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 80px;
-    justify-content: space-evenly;
+#banner3 {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 60px;
+  justify-content: space-evenly;
 }
-#banner3 .banner-box{
+#banner3 .banner-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  background-image: url("./img/banner/b7.jpg");
+  min-width: 30%;
+  height: 30vh;
+  background-position: center;
+  background-size: cover;
+  padding: 20px;
+  margin: 20px;
+}
+#banner3 .banner-box2 {
+  background-image: url("./img/banner/b4.jpg");
+}
+#banner3 .banner-box3 {
+  background-image: url("./img/banner/b18.jpg");
+}
+#banner3 h2 {
+  color: white;
+  font-weight: 900;
+  font-size: 22px;
+}
+#banner3 h3 {
+  color: #ec544e;
+  font-weight: 800;
+  font-size: 15px;
+}
+#newsletter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-image: url("./img/banner/b14.png");
+  background-repeat: no-repeat;
+  padding: 50px;
+  background-color: #041e42;
+  background-position: 20% 30%;
+}
+
+#newsletter h4 {
+  font-size: 22px;
+  font-weight: 700;
+  color: white;
+}
+#newsletter p {
+  font-size: 14px;
+  font-weight: 600;
+  color: #818ea0;
+}
+#newsletter span {
+  color: #ffbd27;
+}
+#newsletter .form {
+  display: flex;
+  width: 40%;
+}
+#newsletter input {
+  height: 3.125rem;
+  padding: 0 1.25em;
+  font-size: 14px;
+  width: 100%;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  outline: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+#newsletter .sign-up {
+  padding: 10px;
+  background: #088178;
+  color: white;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+footer .col {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+footer.logo {
+  margin-bottom: 30px;
+}
+footer h4 {
+  font-size: 14px;
+  padding-bottom: 20px;
+}
+footer p {
+  font-size: 13px;
+  margin: 0 0 8px 0;
+}
+
+footer a {
+  font-size: 13px;
+  text-decoration: none;
+  color: #222;
+  margin-bottom: 10px;
+}
+
+footer .follow {
+  margin-top: 20px;
+}
+footer .follow i {
+  color: #465b52;
+  padding-right: 4px;
+  cursor: pointer;
+}
+
+footer .install .row img {
+  border: 1px solid #088178;
+  border-radius: 6px;
+}
+footer .install img {
+  margin: 10px 0 15px 0;
+}
+footer .follow i:hover,
+footer a:hover {
+  color: #088178;
+}
+footer .copyright {
+  width: 100%;
+  text-align: center;
+}
+
+@media (max-width: 799px) {
+  #navbar {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
-   
-    background-image: url('./img/banner/b7.jpg');
-    min-width: 30%;
+    position: fixed;
+    width: 300px;
+    height: 100vh;
+    justify-content: flex-start;
+    background-color: #e3e6f3;
+    top: 0;
+    right: -300px;
+    padding: 80px 0 0 10px;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
+  }
+  #navbar.active{
+    right: 0;
+  }
+  #navbar li {
+    margin-bottom: 25px;
+  }
+  #mobile{
+    display: flex;
+    align-items: center;
+  }
+  #mobile i{
+    color: #1a1a1a;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+  #close{
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+  #lg-bag{
+    display: none;
+  }
+  #hero{
+    height: 70vh;
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+  }
+  #feature{
+    justify-content: center;
+  }
+  #feature .fe-box{
+    margin: 15px 15px;
+  }
+  #product1 .pro-container{
+    justify-content: center;
+  }
+  #product1 .pro{
+    margin: 15px;
+  }
+  #banner{
+    height: 20vh;
+  }
+  #sm-banner .banner-box{
+    min-width: 100%;
     height: 30vh;
     background-position: center;
     background-size: cover;
-    padding: 20px;
-    margin: 20px;
+  }
+  #banner3{
+    padding: 0 40px;
+  }
+  #banner3 .banner-box{
+    width: 20%;
+  }
+  #newsletter .form{
+    width: 70%;
+  }
 }
-#banner3 .banner-box2{
-    background-image: url('./img/banner/b4.jpg');
+
+@media (max-width:477px) {
+    .section-p1{
+        padding: 20px;
+    }
+    #header{
+        padding: 10px 30px;
+    }
+    #feature{
+        justify-content: space-between;
+    }
+    h1{
+        font-size: 36px;
+    }
+    h2{
+        font-size: 30px;
+    }
+    #hero{
+        padding: 0 20px;
+        background-position: 55%;
+    }
+    #feature .fe-box{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #product1 .pro{
+        width: 100%;
+    }
+    #banner{
+        height: 40vh;
+    }
+    #sm-banner .banner-box{
+       
+        height: 40vh;
+        
+      }
+      #sm-banner .banner-box2{
+        margin-top: 20px;
+      }
+      #banner3{
+        padding: 0 20px;
+        
+      }
+      #banner3 .banner-box{
+        width: 100%;
+      }
+      #newsletter{
+        padding: 40px 20px;
+      }
+      #newsletter .form{
+        width: 100%;
+      }
+      footer .copyright{
+        text-align: start;
+      }
 }
-#banner3 .banner-box3{
-    background-image: url('./img/banner/b18.jpg');
-}
-#banner3 h2{
-    color: white;
-    font-weight: 900;
-    font-size: 22px;
-}
-#banner3 h3{
-    color: #ec544e;
-    font-weight: 800;
-    font-size: 15px;
+
+
+/* ####Shop-page### */
+#page-header{
+    width: 100%;
+    height: 40vh;
+    background-image: url('./img/banner/b1.jpg');
 }
