--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@
   display: none;
   align-items: center;
 }
-#close{
-    display: none;
+#close {
+  display: none;
 }
 #hero {
   background: url("./img/hero4.png");
@@ -428,6 +428,399 @@ footer .copyright {
   text-align: center;
 }
 
+/* ####Shop-page### */
+#page-header {
+  width: 100%;
+  padding: 20px 15px;
+  height: 40vh;
+  background-image: url("./img/banner/b1.jpg");
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-position: center;
+  background-size: cover;
+}
+#page-header h2,
+p {
+  color: white;
+}
+#pagination {
+  text-align: center;
+  margin-bottom: 16px;
+}
+#pagination a {
+  text-decoration: none;
+  font-weight: 600;
+  background-color: #088178;
+  padding: 15px 20px;
+  border-radius: 4px;
+  color: white;
+}
+#pagination a l {
+  font-size: 16px;
+}
+#prodetails {
+  display: flex;
+  margin-top: 20px;
+}
+
+#prodetails .pro-img {
+  width: 40%;
+  margin-right: 50px;
+}
+#prodetails .single-pro-details {
+  width: 50%;
+  padding-top: 30px;
+}
+.small-grp-img {
+  display: flex;
+  justify-content: space-between;
+}
+.small-img-col {
+  flex-basis: 24%;
+  cursor: pointer;
+}
+#prodetails .single-pro-details h4 {
+  padding: 40px 0 20px 0;
+}
+#prodetails .single-pro-details select {
+  display: block;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+}
+#prodetails .single-pro-details input {
+  width: 50px;
+  margin-right: 10px;
+  height: 40px;
+  padding-left: 10px;
+  font-size: 16px;
+}
+#prodetails .single-pro-details input:focus {
+  outline: none;
+}
+#prodetails button {
+  color: white;
+  background: #088178;
+}
+
+/* 
+blog page */
+
+#page-header.blog-header {
+  background-image: url("./img/banner/b19.jpg");
+}
+
+#blog {
+  padding: 150px 150px 0 150px;
+}
+/* #blog.blog-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+} */
+
+#blog .blog-box {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  position: relative;
+  padding-bottom: 90px;
+}
+#blog .blog-img {
+  margin-right: 40px;
+  width: 50%;
+  /* margin-bottom: 30px; */
+}
+#blog img {
+  height: 300px;
+  object-fit: cover;
+  width: 100%;
+}
+
+#blog .blog-details {
+  width: 50%;
+}
+.blog-details p {
+  color: black;
+}
+#blog .blog-details a {
+  text-decoration: none;
+  font-size: 11px;
+  color: #000;
+  font-weight: 700;
+  position: relative;
+  transition: 0.3s;
+}
+
+#blog .blog-details a::after {
+  content: "";
+  top: 4px;
+  right: -60px;
+  position: absolute;
+  width: 50px;
+  height: 1px;
+  background-color: #000;
+}
+#blog .blog-details a:hover::after {
+  background-color: #088178;
+}
+#blog .blog-details a:hover {
+  color: #088178;
+}
+#blog .blog-box h1 {
+  position: absolute;
+  top: -60px;
+  left: 0;
+  font-size: 70px;
+  font-weight: 700;
+  color: #c9cbce;
+  z-index: -9;
+}
+
+/* #########ABout page########### */
+
+#page-header.about-header {
+  background-image: url("./img/about/banner.png");
+}
+#about-head {
+  display: flex;
+  text-align: center;
+  align-items: center;
+}
+#about-head p {
+  color: black;
+}
+#about-head img {
+  width: 50%;
+  height: auto;
+}
+#about-head div {
+  padding-left: 40px;
+}
+#about-app {
+  text-align: center;
+}
+.about-header p,
+.about-header h1 {
+  color: rgb(253, 253, 253);
+}
+#about-app .video {
+  width: 70%;
+  height: 100%;
+  margin: 30px auto 0 auto;
+}
+#about-app .video video {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+/* 
+########contact us################ */
+
+#contact-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.details div p {
+  color: black;
+}
+#contact-details .details {
+  width: 40%;
+}
+#contact-details .details span,
+#form-details form span {
+  font-size: 12px;
+}
+#contact-details .details h2,
+#form-details form h2 {
+  font-size: 26px;
+  line-height: 35px;
+  padding: 20px 0;
+}
+#contact-details .details h3 {
+  font-size: 16px;
+  padding-bottom: 15px;
+}
+#contact-details .details li {
+  list-style: none;
+  display: flex;
+  padding: 10px 0;
+}
+#contact-details .details li i {
+  font-size: 14px;
+  padding-right: 22px;
+}
+#contact-details .details li p {
+  margin: 0;
+  font-size: 14px;
+}
+#contact-details .map {
+  width: 55%;
+  height: 480px;
+}
+#contact-details .map iframe {
+  width: 100%;
+  height: 100%;
+}
+#form-details{
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+  padding: 80px;
+  border: 1px solid #e1e1e1;
+}
+#form-details form {
+  display: flex;
+  width: 65%;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#form-details form input,
+#form-details form textarea {
+  width: 100%;
+  padding: 12px 15px;
+  outline: none;
+  margin-bottom: 20px;
+  border: 1px solid #e1e1e1;
+}
+#form-details form button {
+  background-color: #088178;
+  color: white;
+}
+#form-details .people div {
+  padding-bottom: 25px;
+  display: flex;
+  align-items: flex-start;
+}
+#form-details .people div img {
+  width: 65px;
+  height: 65px;
+  object-fit: cover;
+  margin-right: 15px;
+}
+#form-details .people div p{
+  color: #000;
+  margin: 0;
+  font-size: 13px;
+  line-height: 24px;
+}
+#form-details .people div p span{
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+
+}
+/* CART */
+#cart{
+  overflow-x: auto;
+}
+#cart table {
+  width : 100% ;
+  border-collapse : collapse ;
+  table-layout : fixed ;
+  white-space : nowrap ;
+}
+  #cart table img {
+  width : 70px ;
+  }
+  #cart table td:nth-child(1){      /* target is column custom width */
+    width: 100px;
+    text-align: center;
+  }
+  #cart table td:nth-child(2){
+    width: 150px;
+    text-align: center;
+  }
+  #cart table td:nth-child(3){
+    width: 250px;
+    text-align: center;
+  }
+  #cart table td:nth-child(4),#cart table td:nth-child(5),
+  #cart table td:nth-child(6){
+    width: 150px;
+    text-align: center;
+  }
+  #cart table td:nth-child(5) input{
+    width: 70px;
+    padding: 10px 5px 10px 15px;
+  }
+  #cart table thead {
+    border : 1px solid #e2e9e1 ;
+    border-left : none ;
+    border-right : none ;
+  }
+    #cart table thead td {
+    font-weight : 700 ;
+    text-transform : uppercase ;
+    font-size : 13px ;
+    padding : 18px 0 ;
+  }
+  #cart table tbody tr td{
+    padding-top: 15px;
+  }
+  #cart table tbody td{
+    font-size: 13px;
+  }
+
+  #cart-add{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+#coupon{
+  width: 50%;
+  margin-bottom: 30px;
+}
+#coupon h3,#subtotal h3{
+  padding-bottom: 15px;
+}
+#coupon input {
+padding : 10px 20px ;
+outline : none ;
+width : 60% ;
+margin-right : 10px ;
+border : 1px solid #e2e9e1 ;
+}
+#coupon button {
+background-color : #088178 ;
+color : #fff ;
+padding: 12px 20px;
+}
+#subtotal{
+  width: 50%;
+  margin-bottom: 30px;
+  border: 1px solid #e2e9e1;
+  padding: 30px;
+}
+#subtotal table{
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+}
+#subtotal table td{
+  width: 50%;
+  border: 1px solid #e2e9e1;
+  padding: 10px;
+  font-size: 13px;
+}
+#subtotal button{
+  background-color : #088178 ;
+color : #fff ;
+}
+
+
+
+
+
+
+
+
+
+
+  /* MEDIAQUERY */
 @media (max-width: 799px) {
   #navbar {
     display: flex;
@@ -444,22 +837,22 @@ footer .copyright {
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     transition: 0.3s;
   }
-  #navbar.active{
+  #navbar.active {
     right: 0;
   }
   #navbar li {
     margin-bottom: 25px;
   }
-  #mobile{
+  #mobile {
     display: flex;
     align-items: center;
   }
-  #mobile i{
+  #mobile i {
     color: #1a1a1a;
     font-size: 24px;
     padding-left: 20px;
   }
-  #close{
+  #close {
     display: initial;
     position: absolute;
     top: 30px;
@@ -467,153 +860,187 @@ footer .copyright {
     color: #222;
     font-size: 24px;
   }
-  #lg-bag{
+  #lg-bag {
     display: none;
   }
-  #hero{
+  #hero {
     height: 70vh;
     padding: 0 80px;
     background-position: top 30% right 30%;
   }
-  #feature{
+  #feature {
     justify-content: center;
   }
-  #feature .fe-box{
+  #feature .fe-box {
     margin: 15px 15px;
   }
-  #product1 .pro-container{
+  #product1 .pro-container {
     justify-content: center;
   }
-  #product1 .pro{
+  #product1 .pro {
     margin: 15px;
   }
-  #banner{
+  #banner {
     height: 20vh;
   }
-  #sm-banner .banner-box{
+  #sm-banner .banner-box {
     min-width: 100%;
     height: 30vh;
     background-position: center;
     background-size: cover;
   }
-  #banner3{
+  #banner3 {
     padding: 0 40px;
   }
-  #banner3 .banner-box{
+  #banner3 .banner-box {
     width: 20%;
   }
-  #newsletter .form{
+  #newsletter .form {
     width: 70%;
+  }
+  /* contact page */
+  #form-details{
+    padding: 40px;
+  }
+  #form-details form{
+    width: 50%;
   }
 }
 
-@media (max-width:477px) {
-    .section-p1{
-        padding: 20px;
-    }
-    #header{
-        padding: 10px 30px;
-    }
-    #feature{
-        justify-content: space-between;
-    }
-    h1{
-        font-size: 36px;
-    }
-    h2{
-        font-size: 30px;
-    }
-    #hero{
-        padding: 0 20px;
-        background-position: 55%;
-    }
-    #feature .fe-box{
-        width: 155px;
-        margin: 0 0 15px 0;
-    }
-    #product1 .pro{
-        width: 100%;
-    }
-    #banner{
-        height: 40vh;
-    }
-    #sm-banner .banner-box{
-       
-        height: 40vh;
-        
-      }
-      #sm-banner .banner-box2{
-        margin-top: 20px;
-      }
-      #banner3{
-        padding: 0 20px;
-        
-      }
-      #banner3 .banner-box{
-        width: 100%;
-      }
-      #newsletter{
-        padding: 40px 20px;
-      }
-      #newsletter .form{
-        width: 100%;
-      }
-      footer .copyright{
-        text-align: start;
-      }
-}
-
-
-/* ####Shop-page### */
-#page-header{
+@media (max-width: 477px) {
+  .section-p1 {
+    padding: 20px;
+  }
+  #header {
+    padding: 10px 30px;
+  }
+  #feature {
+    justify-content: space-between;
+  }
+  h1 {
+    font-size: 36px;
+  }
+  h2 {
+    font-size: 30px;
+  }
+  #hero {
+    padding: 0 20px;
+    background-position: 55%;
+  }
+  #feature .fe-box {
+    width: 155px;
+    margin: 0 0 15px 0;
+  }
+  #product1 .pro {
     width: 100%;
-    padding: 20px 15px;
+  }
+  #banner {
     height: 40vh;
-    background-image: url('./img/banner/b1.jpg');
-    justify-content: center;
-    text-align: center;
+  }
+  #sm-banner .banner-box {
+    height: 40vh;
+  }
+  #sm-banner .banner-box2 {
+    margin-top: 20px;
+  }
+  #banner3 {
+    padding: 0 20px;
+  }
+  #banner3 .banner-box {
+    width: 100%;
+  }
+  #newsletter {
+    padding: 40px 20px;
+  }
+  #newsletter .form {
+    width: 100%;
+  }
+  footer .copyright {
+    text-align: start;
+  }
+  /* ###single products#### */
+  #prodetails {
     display: flex;
     flex-direction: column;
-}
-#page-header h2,p{
-    color: white;
-}
-#pagination{
-    text-align: center;
-    margin-bottom: 16px;
-}
-#pagination a{
-    text-decoration: none;
-    font-weight: 600;
-    background-color: #088178;
-    padding: 15px 20px;
-    border-radius: 4px;
-    color: white;
+  }
+  #prodetails img {
+    width: 100%;
+    margin-right: 0px;
+  }
+  #prodetails .single-pro-details {
+    width: 100%;
+  }
+  /* ##########Blog ###############*/
+  #blog {
+    padding: 10px 20px 0 20px;
+    width: 100%;
+  }
+
+  #blog .blog-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #blog .blog-img {
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 30px;
+  }
+  #blog img {
+    width: 100%;
+  }
+  #blog .blog-details {
+    width: 100%;
+  }
+
+  /* #BLOG PART IS BREAKING DOWN IN SMALL SCREEN  */
+
+  /* ***ABout page***** */
+  #about-head {
+    flex-direction: column;
+  }
+  #about-head img {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  #about-head div {
+    padding-left: 0px;
+  }
+  #about-head .video {
+    width: 100%;
+  }
+  /* contact page */
+  #contact-details{
     
-}
-#pagination a l{
-    font-size: 16px;
-}
-#prodetails{
-    display: flex;
-    margin-top: 20px;
-}
-
-
-#prodetails .pro-img{
-
-    width: 40%;
-    margin-right: 50px;
-}
-#prodetails .single-pro-details{
-    width: 50%;
-    padding-top: 30px;
-}
-.small-grp-img{
-    display: flex;
-    justify-content: space-between;
-}
-.small-img-col{
-    flex-basis: 24%;
-    cursor: pointer;
+    flex-direction: column;
+    
+  }
+  #contact-details .details{
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  #contact-details .map{
+    width: 100%;
+  }
+  #form-details{
+    margin: 10px;
+    padding: 30px 10px;
+    flex-wrap: wrap;
+  }
+  #form-details form{
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  /* CART */
+  #cart-add{
+    flex-direction: column;
+    
+  }
+  #coupon{
+    width: 100%;
+  }
+  #subtotal{
+    width: 100%;
+    padding: 20px;
+  }
 }
