--- a/style.css
+++ b/style.css
@@ -193,6 +193,8 @@
   border-radius: 50px;
   background-color: #e8f6ea;
   border: 1px solid #cce7d0;
+  align-items: center;
+  text-align: center;
   color: #088178;
   position: absolute;
   bottom: 20px;
@@ -1046,4 +1048,75 @@ color : #fff ;
     width: 100%;
     padding: 20px;
   }
+}
+
+
+
+
+/* ############### API STYLING DIV ############### */
+
+#cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  word-wrap: break-word;
+  margin-top: 1rem;
+  
+  
+}
+
+.card{
+  
+  width: 23%;
+  min-width: 250px;
+  padding: 10px 12px;
+  border: 1px solid #cce7d0;
+  border-radius: 25px;
+  cursor: pointer;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+  margin: 15px 0;
+  position: relative;
+  transition: 0.2s ease;
+  font-size: 12px;
+  
+}
+.card:hover{
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+}
+.title{
+
+  font-size: 1rem;
+}
+.images{
+  height: 180px;
+  border-radius: 20px;
+  width: 80%;
+  align-items: center;
+}
+.description{
+  color: rgb(9, 9, 10);
+  text-align: left;
+  padding: 1.5rem;
+
+}
+.category{
+  font-weight: 500;
+  font-size: 1rem;
+  text-transform: capitalize;
+  color: rgb(17, 189, 241);
+}
+.price{
+  font-size: 1rem;
+  text-transform: capitalize;
+}
+.card-footer{
+  text-align: center;
+  position: absolute;
+  bottom: 1rem;
+  right: 12px;
+  /* border-radius: 20%;
+  background-color: pink; */
+  border-color: #088178;
+  color: #0f514c;
+ 
 }
